[gd_scene load_steps=6 format=3 uid="uid://c3optionsmenu1"]

[ext_resource type="Script" path="res://scripts/OptionsMenu.gd" id="1_options"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.04, 0.08, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.3, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_active"]
bg_color = Color(0.15, 0.12, 0.22, 1)
border_width_bottom = 3
border_color = Color(0.9, 0.75, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_inactive"]
bg_color = Color(0.08, 0.06, 0.12, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.12, 0.1, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.15, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 42
text = "OPTIONS"
horizontal_alignment = 1

[node name="TabButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AudioTabBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tab_active")
theme_override_styles/hover = SubResource("StyleBoxFlat_tab_active")
text = "Audio"
flat = true

[node name="ControlsTabBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tab_inactive")
theme_override_styles/hover = SubResource("StyleBoxFlat_tab_inactive")
text = "Controls"
flat = true

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/TabButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.6, 0.5, 0.3, 1)
layout_mode = 2

[node name="ContentContainer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="MasterVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="ValueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MasterVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="MusicVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="ValueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/MusicVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="SFXVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="ValueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/AudioContainer/SFXVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="ControlsContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="KeybindContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Back"
